--- a/Gamma Lubricantes/src/components/Item/Item.css
+++ b/Gamma Lubricantes/src/components/Item/Item.css
@@ -1,13 +1,13 @@
 .item-card {
   background: #fff;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 10px;
-  padding: 10px;
-  width: calc(33% - 20px);
+  padding: 20px;
+  width: calc(25% - 20px);
   box-sizing: border-box;
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s, background 0.2s;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,11 +17,12 @@
 .item-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background: #f0f0f0;
 }
 
 .item-image-container {
-  width: 200px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -32,7 +33,8 @@
 
 .item-image {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 .item-title {
@@ -40,6 +42,7 @@
   margin: 10px 0;
   text-align: center;
   color: black;
+  flex-shrink: 0;
 }
 
 .item-price,
@@ -48,4 +51,14 @@
   margin: 5px 0;
   text-align: center;
   color: black;
+  flex-shrink: 0;
+}
+
+.buttonDetail {
+  color: white;
+  flex-shrink: 0;
+}
+
+.item-card .btn {
+  margin-top: auto;
 }
