--- a/Gamma Lubricantes/src/components/ItemDetail/ItemDetail.css
+++ b/Gamma Lubricantes/src/components/ItemDetail/ItemDetail.css
@@ -4,28 +4,72 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  max-width: 400px;
-  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.item-detail-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.item-detail-image-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item-detail-image {
+  max-width: 100%;
+  max-height: 400px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.item-detail-info {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .item-detail-title {
+  font-size: 1.8em;
+  margin-bottom: 15px;
+  color: black;
+}
+
+.item-detail-text {
+  font-size: 1.2em;
+  margin: 10px 0;
+  color: black;
+}
+
+.item-detail-table-container {
+  margin-top: 20px;
+}
+
+.item-detail-table-title {
   font-size: 1.5em;
   margin-bottom: 10px;
   color: black;
 }
 
-.item-detail-image {
-  width: 200px;
-  height: 100px;
-  object-fit: scale-down;
-  border-radius: 5px;
-  margin-bottom: 15px;
+.item-detail-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
 }
 
-.item-detail-price,
-.item-detail-stock,
-.item-detail-code {
-  font-size: 1.2em;
-  margin: 10px 0;
-  color: black;
+.item-detail-table th,
+.item-detail-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
+}
+
+.item-detail-table th {
+  background-color: #f0f0f0;
 }
