--- a/Gamma Lubricantes/src/components/InactiveClients/InactiveClients.css
+++ b/Gamma Lubricantes/src/components/InactiveClients/InactiveClients.css
@@ -5,11 +5,37 @@
   padding: 20px;
   max-width: 600px;
   margin: 20px auto;
+  text-align: center;
+}
+
+.inactiveClientDetail {
+  padding: 6px 16px;
+  border: 1px solid #ccc;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  height: 38px;
+  line-height: 26px;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.inactiveClientDetail:hover {
+  background-color: darkblue;
+}
+
+.inactiveClientDetail a {
+  color: white;
+  text-decoration: none;
 }
 
 .inactive-clients ul {
   list-style-type: none;
   padding: 0;
+  text-align: center;
 }
 
 .inactive-clients li {
@@ -19,6 +45,7 @@
   padding: 10px;
   margin-bottom: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .inactive-clients li p {
