--- a/Gamma Lubricantes/src/components/ItemDetail/ItemDetail.css
+++ b/Gamma Lubricantes/src/components/ItemDetail/ItemDetail.css
@@ -35,10 +35,28 @@
   justify-content: center;
 }
 
+.item-detail-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .item-detail-title {
   font-size: 1.8em;
   margin-bottom: 15px;
   color: black;
+}
+
+.edit-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #007bff;
+}
+
+.edit-button:hover {
+  color: #0056b3;
 }
 
 .item-detail-text {
